# data-compression

./: .gitignore  Main.hs  Readme.md  Readme.txt  TestZip.hs  Tests.hs  haskell-compression.cabal  lzw.cabal  lzw.hs
Codec/: .HaskellCompression.hs.swp  ExampleStrings.hs  HaskellCompression.hs  Unzip.hs  Zip.hs
Codec/HaskellCompression/: ExampleStrings.hs  Shared.hs  Unzip.hs  Zip.hs
