name:               haskell-compression
version:            1.0
synopsis:           
description:        
category:           System
license:            BSD3
author:             Alan Hawkins
homepage:           codekinder.com
maintainer:         hawk.alan@gmail.com
cabal-version:      >= 1.2
build-type:         Simple

executable hs-compress
    main-is:            Main.hs
    build-depends:      base , containers, bytestring,bimap
