name: haskell-compression
version: 0.2
cabal-version: >=1.2
build-type: Simple
license: BSD3
maintainer: hawk.alan@gmail.com
homepage: http://xy30.com
category: System
author: Alan Hawkins
synopsis: compress files

source-repository head
    type: git
    location: http://github.com/xpika/haskell-compression.git

library
    exposed-modules:
        Codec.HaskellCompression
    build-depends:
        base -any,
        containers -any,
        bytestring -any,
        bimap -any,
        booleanlist -any

executable hs-compress
    main-is: Main.hs
    build-depends:
        base -any,
        containers -any,
        bytestring -any,
        bimap -any


